--- a/pages/collection.html
+++ b/pages/collection.html
@@ -10,8 +10,6 @@
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
   <link rel='stylesheet' href='../styling/main.css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
   <link rel="stylesheet" href="../styling/search.css" />
 </head>
 
@@ -120,7 +118,7 @@
     </div>
     </div>
 
-    <a href = 'collection.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
+    <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
     <ul class='d-flex p-0 m-0 list-unstyled' id='icon-list'>
      
