--- a/pages/single-product.html
+++ b/pages/single-product.html
@@ -206,6 +206,7 @@
     </footer>
     <script src = "../scripts/main.js"></script>
     <script src="../scripts/search.js"></script>
+    <script src="../scripts/wishlist.js"></script>
     <script src="../scripts/single-product.js"></script>
   </body>
 </html>
