--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel = 'stylesheet' href = 'styling/main.css' />
     <link rel = 'stylesheet' href = 'styling/homepage.css' />
     <link rel="stylesheet" href="styling/search.css">
+    <link rel="stylesheet" href="styling/wishlist.css" />
   </head>
   <body>
     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
@@ -72,7 +73,7 @@
         </footer>
       </div>
 
-    <a href = '../index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
+    <a href = 'index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
     <ul class='d-flex p-0 m-0 list-unstyled' id='icon-list'>
      
@@ -113,6 +114,11 @@
           <i class='bi bi-bag'></i>
         </button>
       </li>
+      <li class='mx-2'>
+        <a id='wishlist-cont' href = 'pages/wishlist.html' data-count="0" class = 'bg-transparent border-0 text-primary'>
+          <i class = 'bi bi-heart wishlist-main-counter'></i>
+        </a>
+      </li>
     </ul>
 
       <section id = 'cart-panel' class = 'p-2'>
@@ -126,7 +132,7 @@
 
         <section id = 'empty-cart' class = 'd-flex flex-column justify-content-center align-items-center p-3'>
           <strong>Your cart is empty</strong>
-          <a class = 'darkGreen-btn p-2 mt-2' href = 'collection.html'>Continue shopping</a>
+          <a class = 'darkGreen-btn p-2 mt-2' href = 'pages/collection.html'>Continue shopping</a>
         </section>
 
         <table class = 'w-100' id = 'cart-products-table'>
@@ -515,5 +521,6 @@
   <script src = "scripts/main.js"></script>
   <script src="scripts/search.js"></script>
   <script src = 'scripts/homepage.js'></script>
+  <script src="scripts/wishlist.js"></script>
   </body>
 </html>
