--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -379,5 +379,6 @@
   <script src = "../scripts/main.js"></script>
   <script src="../scripts/search.js"></script>
   <script src = "../scripts/about-us.js"></script>
+  <script src="../scripts/wishlist.js"></script>
   </body>
 </html>
