--- a/pages/category.html
+++ b/pages/category.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
   <link rel='stylesheet' href='../styling/main.css'>
   <link rel="stylesheet" href="../styling/search.css" />
+  <link rel="stylesheet" href="../styling/wishlist.css" />
 </head>
 
 <body id = 'category-page'>
@@ -202,6 +203,7 @@
   <script src="../scripts/main.js"></script>
   <script src="../scripts/search.js"></script>
   <script src="../scripts/category.js"></script>
+  <script src="../scripts/wishlist.js"></script>
 </body>
 
 </html>
