--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -446,5 +446,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/checkout.js"></script>
+    <script src="../scripts/wishlist.js"></script>
   </body>
 </html>
