--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -235,5 +235,6 @@
     </footer>
   <script src = "../scripts/main.js"></script>
   <script src="../scripts/search.js"></script>
+  <script src="../scripts/wishlist.js"></script>
   </body>
 </html>
