--- a/pages/register.html
+++ b/pages/register.html
@@ -256,5 +256,6 @@
     ></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/search.js"></script>
+    <script src="../scripts/wishlist.js"></script>
   </body>
 </html>
