--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -106,7 +106,7 @@
       
       
       <li class='mx-2'>
-        <a href='pages/login.html' class='d-none d-md-block button bg-transparent border-0 text-primary'>
+        <a href='login.html' class='d-none d-md-block button bg-transparent border-0 text-primary'>
           <i class='bi bi-person' style='font-size:23px'></i>
         </a>
       </li>
@@ -114,6 +114,11 @@
         <button id='open-cart-panel' data-count="0" class='bg-transparent border-0 text-primary'>
           <i class='bi bi-bag'></i>
         </button>
+      </li>
+      <li class='mx-2'>
+        <a id='wishlist-cont' href = 'wishlist.html' data-count="0" class = 'bg-transparent border-0 text-primary'>
+          <i class = 'bi bi-heart wishlist-main-counter'></i>
+        </a>
       </li>
     </ul>
 
@@ -154,7 +159,6 @@
         <div class = 'layout'></div>
       </section>
     </header>
-
     <main>
       <!-- Main Content Here -->
       <!-- -------------- HERO SECTION ------------ -->
