--- a/pages/collection.html
+++ b/pages/collection.html
@@ -26,7 +26,7 @@
           <li class = 'parent-element px-3' data-child = "shop-all-menu">
             <button class = 'bg-transparent pr-2 border-0 text-primary menu-toggle' data-toggle = "shop-all-menu" id = 'open-shop-all'>Shop</button>
             <ul class = 'child-menu' id = 'shop-all-menu'>
-              <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i>Shop</li>
+              <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i> Shop</li>
               <li>
                 <a href="collection.html" class = 'text-primary'>
                   Shop All
@@ -75,57 +75,6 @@
         </footer>
       </div>
 
-      <!-- <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a> -->
-
-      <!-- <ul class = 'd-flex p-0 m-0 list-unstyled' id = 'icon-list'>
-        <li class = 'mx-2'>
-          <button id = 'open-search-panel' class = 'bg-transparent border-0 text-primary'>
-            <i class = 'bi bi-search'></i>
-          </button>
-        </li>
-        <li class = 'mx-2'>
-          <a href = 'auth.html' class = 'd-none d-md-block button bg-transparent border-0 text-primary'>
-            <i class = 'bi bi-person' style = 'font-size:23px'></i>
-          </a>
-        </li>
-        <li class = 'mx-2'>
-          <button id = 'open-cart-panel' data-count = "0" class = 'bg-transparent border-0 text-primary'>
-            <i class = 'bi bi-bag'></i>
-          </button>
-        </li>
-      </ul> -->
-      <!-- mobile footer-->
-      <footer class='d-block d-md-none p-5 position-absolute bottom-0 w-100'>
-        <a href='#login' class='text-primary' style='font-size:18px'>
-          <i class='bi bi-person'></i>
-          Log in
-        </a>
-        <nav class='d-flex py-4'>
-          <a href='#facebook-link' target='_blank' class='text-primary mr-2'>
-            <i class='bi bi-facebook'></i>
-          </a>
-          <a href='#pinterest-link' target='_blank' class='text-primary mx-2'>
-            <i class='bi bi-pinterest'></i>
-          </a>
-          <a href='#instagram' target='_blank' class='text-primary mx-2'>
-            <i class='bi bi-instagram'></i>
-          </a>
-          <a href='#tiktok' target='_blank' class='text-primary mx-2'>
-            <i class='bi bi-tiktok'></i>
-          </a>
-        </nav>
-      </footer>
-    </div>
-    </div>
-
-    <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
-
-    <ul class='d-flex p-0 m-0 list-unstyled' id='icon-list'>
-     
-     
-<i class="fa-regular fa-heart" style="font-size:25px;"></i>
-<span id="wishlist-cont" style="font-size:20px;">0</span>
-
     <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
     <ul class='d-flex p-0 m-0 list-unstyled' id='icon-list'>
@@ -166,6 +115,11 @@
         <button id='open-cart-panel' data-count="0" class='bg-transparent border-0 text-primary'>
           <i class='bi bi-bag'></i>
         </button>
+      </li>
+      <li class='mx-2'>
+        <a id='wishlist-cont' href = 'wishlist.html' data-count="0" class = 'bg-transparent border-0 text-primary'>
+          <i class = 'bi bi-heart wishlist-main-counter'></i>
+        </a>
       </li>
     </ul>
 
