--- a/pages/single-product.html
+++ b/pages/single-product.html
@@ -72,7 +72,7 @@
         </footer>
       </div>
 
-    <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
+    <a href = '../index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
     <ul class='d-flex p-0 m-0 list-unstyled' id='icon-list'>
      
@@ -112,6 +112,11 @@
         <button id='open-cart-panel' data-count="0" class='bg-transparent border-0 text-primary'>
           <i class='bi bi-bag'></i>
         </button>
+      </li>
+      <li class='mx-2'>
+        <a id='wishlist-cont' href = 'wishlist.html' data-count="0" class = 'bg-transparent border-0 text-primary'>
+          <i class = 'bi bi-heart wishlist-main-counter'></i>
+        </a>
       </li>
     </ul>
 
