--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -179,9 +179,9 @@
 
     <footer class = 'bg-primary px-3 py-5'>
       <nav class = 'd-block d-md-flex justify-content-center align-items-center'>
-        <a href = 'pages/about-us.html' class = 'd-block d-md-inline mx-2 py-2 text-white'>About Us</a>
-        <a href = 'pages/contact-us.html' class = 'mx-2 d-block d-md-inline py-2 text-white'>Contact Us</a>
-        <a href = 'pages/collection.html' class = 'mx-2 d-block d-md-inline py-2 text-white'>Shop All</a>
+        <a href = 'about-us.html' class = 'd-block d-md-inline mx-2 py-2 text-white'>About Us</a>
+        <a href = 'contact-us.html' class = 'mx-2 d-block d-md-inline py-2 text-white'>Contact Us</a>
+        <a href = 'collection.html' class = 'mx-2 d-block d-md-inline py-2 text-white'>Shop All</a>
       </nav>
       <ul class = 'd-flex justify-content-center align-items-center px-0 py-5 list-unstyled'>
         <li>
