--- a/pages/category.html
+++ b/pages/category.html
@@ -117,6 +117,11 @@
           <i class='bi bi-bag'></i>
         </button>
       </li>
+      <li class='mx-2'>
+        <a id='wishlist-cont' href = 'wishlist.html' data-count="0" class = 'bg-transparent border-0 text-primary'>
+          <i class = 'bi bi-heart wishlist-main-counter'></i>
+        </a>
+      </li>
     </ul>
 
       <section id = 'cart-panel' class = 'p-2'>
