--- a/pages/register.html
+++ b/pages/register.html
@@ -121,6 +121,11 @@
           <i class='bi bi-bag'></i>
         </button>
       </li>
+      <li class='mx-2'>
+        <a id='wishlist-cont' href = 'wishlist.html' data-count="0" class = 'bg-transparent border-0 text-primary'>
+          <i class = 'bi bi-heart wishlist-main-counter'></i>
+        </a>
+      </li>
     </ul>
 
       <section id = 'cart-panel' class = 'p-2'>
@@ -134,7 +139,7 @@
 
         <section id = 'empty-cart' class = 'd-flex flex-column justify-content-center align-items-center p-3'>
           <strong>Your cart is empty</strong>
-          <a class = 'darkGreen-btn p-2 mt-2' href = 'collection.html'>Continue shopping</a>
+          <a class = 'darkGreen-btn p-2 mt-2' href = 'pages/collection.html'>Continue shopping</a>
         </section>
 
         <table class = 'w-100' id = 'cart-products-table'>
@@ -159,8 +164,7 @@
 
         <div class = 'layout'></div>
       </section>
-    </header>
-    
+    </header>f
     <section class="hero">
       <div class="overlay" aria-hidden="true"></div>
       <div class="login-card" role="main" aria-labelledby="loginTitle">
