Update about-us and register pages, modify index.js and users.json in project day

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -161,6 +161,11 @@
     </header>
     <main>
       <!-- Main Content Here -->
+
+
+
+
+
       <!-- -------------- HERO SECTION ------------ -->
   <section class="hero-section d-flex align-items-center text-white">
     <div class="container text-center">
@@ -227,12 +232,12 @@
       <div class="col-12 col-sm-6 col-md-3">
         <div class="product-card h-100">
           <img
-            src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+            src="https://packagefreeshop.com/cdn/shop/files/PDP_PF_Simply_Co_Detergent_Lavender_PUEH000409LAVE32OZ_32oz_HAND_R1_EWG.jpg?v=1717599094&width=713"
             class="product-img"
             alt="product"
           />
           <div class="product-body">
-            <h6 class="product-title">Box Laundry Detergent</h6>
+            <h6 class="product-title">Simply Co. Laundry Detergent</h6>
             <p class="product-brand">PACKAGE FREE</p>
             <p class="product-price">$28.00 USD</p>
           </div>
@@ -244,14 +249,14 @@
       <div class="col-12 col-sm-6 col-md-3">
         <div class="product-card h-100">
           <img
-            src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+            src="https://packagefreeshop.com/cdn/shop/products/PDP_PF_Reusable_Swedish_Dishcloth_PUEH000010SET3PFLO_FRONT_R1.jpg?v=1649856821&width=713"
             class="product-img"
             alt="product"
           />
           <div class="product-body">
-            <h6 class="product-title">Box Laundry Detergent</h6>
+            <h6 class="product-title"> Reusable Swedish Dishcloth</h6>
             <p class="product-brand">PACKAGE FREE</p>
-            <p class="product-price">$28.00 USD</p>
+            <p class="product-price">$18.00 USD</p>
           </div>
           <button class="btn product-btn w-100">Choose options</button>
         </div>
@@ -261,14 +266,14 @@
       <div class="col-12 col-sm-6 col-md-3">
         <div class="product-card h-100">
           <img
-            src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+            src="https://packagefreeshop.com/cdn/shop/products/PDP_PF_Dryer_Balls_PUEH0003276PK_FRONT_R1.jpg?v=1649815623&width=713"
             class="product-img"
             alt="product"
           />
           <div class="product-body">
-            <h6 class="product-title">Box Laundry Detergent</h6>
+            <h6 class="product-title">Dryer Balls</h6>
             <p class="product-brand">PACKAGE FREE</p>
-            <p class="product-price">$28.00 USD</p>
+            <p class="product-price">$32.00 USD</p>
           </div>
           <button class="btn product-btn w-100">Choose options</button>
         </div>
