--- a/pages/register.html
+++ b/pages/register.html
@@ -164,7 +164,7 @@
 
         <div class = 'layout'></div>
       </section>
-    </header>f
+    </header> 
     <section class="hero">
       <div class="overlay" aria-hidden="true"></div>
       <div class="login-card" role="main" aria-labelledby="loginTitle">
